<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".TaxActivity$PlaceholderFragment" >

        <TextView
            android:id="@+id/subtotal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/subtotal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tax_text"
            android:layout_alignLeft="@+id/tax"
            android:text="@string/default_total"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tax_text"
            android:layout_alignLeft="@+id/total"
            android:digits="0123456789."
            android:ems="4"
            android:hint="@string/tax_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tax_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/subtotal_text"
            android:layout_below="@+id/subtotal_text"
            android:layout_marginTop="18dp"
            android:text="@string/tax"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/total"
            android:layout_alignBottom="@+id/total"
            android:layout_alignLeft="@+id/tax_text"
            android:text="@string/total"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tax"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/subtotal_text"
            android:text="@string/default_total"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/total_text"
            android:layout_below="@+id/total_text"
            android:layout_marginTop="18dp"
            android:onClick="next"
            android:text="@string/next" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tax"
            android:layout_alignBottom="@+id/tax"
            android:layout_toRightOf="@+id/tax"
            android:text="@string/percent"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

</ScrollView>