<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/items_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.justthetip.ItemsActivity$PlaceholderFragment" >

        <Button
            android:id="@+id/add_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:onClick="addItem"
            android:text="@string/add_item" />

        <Button
            android:id="@+id/remove_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_item"
            android:enabled="false"
            android:onClick="removeItem"
            android:text="@string/remove_item" />

        <Button
            android:id="@+id/next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remove_item"
            android:onClick="next"
            android:text="@string/next" />
    </RelativeLayout>
</ScrollView>