<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/tip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.justthetip.TipActivity$PlaceholderFragment" >

        <EditText
            android:id="@+id/default_tip_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10sp"
            android:digits="0123456789."
            android:ems="4"
            android:gravity="right"
            android:hint="@string/default_tip"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/default_tip_percent"
            android:layout_toRightOf="@+id/default_tip_percent"
            android:text="@string/percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/default_tip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/percent"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/percent"
            android:text="@string/default_tip_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</ScrollView>